# ci_cd_apache_spark

./: .gitignore  pyproject.toml
.github/workflows/: ci.yaml  format.yaml  release.yaml
demo/: Analityka_Spark (1) (1).ipynb  intro_pyspark.ipynb  kagglex.py  spark_intro.py
src/us_accidents_etl/: pipeline.py
src/us_accidents_etl/config/: settings.py
src/us_accidents_etl/extract/: reader.py
src/us_accidents_etl/load/: writer.py
src/us_accidents_etl/spark/: session.py
src/us_accidents_etl/transform/: aggregations.py  enrichments.py  filters.py
tests/: conftest.py
tests/unit/: test_aggregations.py  test_filters.py  test_session.py  test_settings.py  test_writer.py
